# ecommerce-data-cleaning

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml  requirements-lock.txt  requirements.txt  run_pipeline.py
.github/workflows/: ci.yml
data/samples/: olist_customers_dataset.csv  olist_geolocation_dataset.csv  olist_order_items_dataset.csv  olist_order_payments_dataset.csv  olist_order_reviews_dataset.csv  olist_orders_dataset.csv  olist_products_dataset.csv  olist_sellers_dataset.csv
docs/: data_dictionary.md  schema_contract.md  validation_strategy.md
docs/api/: ecom_pipeline.html  index.html  search.js
docs/api/ecom_pipeline/: config.html  pipeline.html  utils.html  validation.html
docs/api/ecom_pipeline/config/: schema_contract.html
docs/api/ecom_pipeline/pipeline/: audit_all_clean_dtypes.html  enforce_schema.html  (+6 more)
reports/: clean_contract_audit.csv  clean_dtypes_flags.csv  clean_dtypes_full.csv  clean_schema_audit.csv  raw_profile.csv
src/: 00_sanity_check_raw.py  01_profile_raw.py  02_standardize_columns.py  03_enforce_schema.py  04_validate_clean_schema.py  05_audit_all_clean_dtypes.py
src/ecom_pipeline/: __init__.py
src/ecom_pipeline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ecom_pipeline/config/: __init__.py  schema_contract.py
src/ecom_pipeline/pipeline/: __init__.py  audit_all_clean_dtypes.py  enforce_schema.py  generate_data_dictionary.py  generate_samples.py  profile_raw.py  sanity_check_raw.py  standardize_columns.py  validate_clean_schema.py  validate_schema_contract.py
src/ecom_pipeline/utils/: __init__.py  io.py  logging.py
src/utils/: io.py  logging.py
tests/: test_io.py  test_pipeline_e2e.py
(+2 files in other folders)
