[project]
name = "ecom-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "pyarrow",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
