[project]
name = "ecom-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pandas",
  "pyarrow",
  "pytest",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ruff>=0.15.1",
]
